# sf-yolo

./: .gitignore  AGENTS.md  SF-YOLO-ULTRALYTICS.md  cityscape2yolo.py  example_train_sf_yolo.py  finetune_yolov26_target.py  merge_yolo_datasets.py  pyproject.toml  tam_gen.py  train_sf-yolo-ultralytics.py  train_sf-yolo.py  train_source.py  train_yolo26_cityscapes.py  val.py  validate_all_models.py  validate_all_models_complete.py  validate_sf_yolo_yolov26.py
.agents/skills/tam-image-generator/: SKILL.md
.agents/skills/tam-image-generator/references/: tam_overview.md
.agents/skills/tam-image-generator/scripts/: generate_tam_samples.py
TargetAugment/: __init__.py  enhance_base.py  enhance_style.py  enhance_vgg16.py  tam_model.py
TargetAugment_train/: extract_data.py  net.py  train.py
data/: foggy_cityscapes.yaml
models/: experimental.py
utils/: general.py  metrics.py  torch_utils.py
utils/loggers/: __init__.py
